# rms

./: .flaskenv  .gitignore  README.md  gunicorn.conf.py  requirements.txt
backend/: .env.bak_20260530_1645  __init__.py  app.py  config.py  extensions.py  requirements.txt
backend/auth/: routes.py  service.py
backend/banknote/: dao.py  model.py  routes.py  schema.py  service.py
backend/common/: db_router.py  excel.py  exceptions.py  fields.py  jwt_util.py  response.py
backend/device/: dao.py  model.py  routes.py  schema.py  service.py
backend/email/: dao.py  model.py  routes.py  schema.py  service.py
backend/fault/: dao.py  model.py  routes.py  schema.py  service.py
backend/firmware/: dao.py  model.py  routes.py  schema.py  service.py
backend/institution/: dao.py  model.py  routes.py  schema.py  service.py
backend/mapping/: dao.py  model.py  routes.py  schema.py  service.py
backend/mqtt_upgrade_adapter/: __init__.py  adapter.py  runner.py
backend/role/: dao.py  model.py  routes.py  schema.py  service.py
backend/upgrade/: __init__.py  service.py
backend/upgrade_record/: dao.py  model.py  routes.py  schema.py  service.py
backend/upgrade_task/: dao.py  model.py  routes.py  schema.py  service.py
backend/user/: dao.py  model.py  routes.py  schema.py  service.py
backend/worktime/: consumer.py  dao.py  model.py  routes.py  schema.py  service.py
device_end/: deploy.sh
device_end/cpp_parser/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  README_DB_TOGGLES.md  requirements.txt
device_end/cpp_parser/config/: database_mapping.json  dp_protocol_v1.json  parser_config.json  protocol_registry.json  universal_parsing_rules.json
device_end/cpp_parser/include/: Application.h
device_end/cpp_parser/test/: test_universal_parser.cpp
device_end/cpp_parser_2026_3_18/: README.md  requirements.txt
device_end/cpp_parser_2026_3_18/config/: database_mapping.json  parser_config.json  protocol_parsing_strategies.json
device_end/cpp_parser_修改日志级别前的安全备份/: CMakeLists.txt
device_end/cpp_parser_修改日志级别前的安全备份/config/: database_mapping.json  dp_protocol_v1.json  dp_protocol_v2.json  parser_config.json  universal_parsing_rules.json  validate_config.sh
device_end/cpp_parser_修改日志级别前的安全备份/include/dpower/db/: Interfaces.h
device_end/cpp_parser_修改日志级别前的安全备份/include/logic/: MessageProcessor.h  ResponseGenerator.h
device_end/cpp_parser_修改日志级别前的安全备份/include/logic/handlers/: BanknoteReportHandler.h  UpgradeResultHandler.h
device_end/cpp_parser_修改日志级别前的安全备份/include/logic/services/: BanknoteServiceImpl.h  DeviceServiceImpl.h  FaultServiceImpl.h  UpgradeServiceImpl.h
device_end/cpp_parser_修改日志级别前的安全备份/include/logic/utils/: MessageUtils.h
device_end/cpp_parser_修改日志级别前的安全备份/src/adapters/: MySqlDatabaseAdaptor.cpp  RedisCacheAdaptor.cpp
device_end/cpp_parser_修改日志级别前的安全备份/src/app/: Application.cpp  main.cpp
device_end/cpp_parser_修改日志级别前的安全备份/src/logic/: Config.cpp  MessageProcessor.cpp  MultiProtocolManager.cpp  ResponseGenerator.cpp  UniversalParser.cpp
device_end/cpp_parser_修改日志级别前的安全备份/src/logic/handlers/: GeneralResponseHandler.cpp  LoginHandler.cpp  UpgradeResultHandler.cpp
device_end/cpp_parser_修改日志级别前的安全备份/src/logic/services/: BanknoteServiceImpl.cpp  DeviceServiceImpl.cpp  FaultServiceImpl.cpp  UpgradeServiceImpl.cpp
device_end/cpp_parser_修改日志级别前的安全备份/src/logic/utils/: MessageUtils.cpp
device_end/device_end_unit_test/: run_unit_tests.sh
device_end/device_end_unit_test/cpp_parser/: CMakeLists.txt
device_end/device_end_unit_test/tcp_gateway/: CMakeLists.txt  README.md  requirements.txt
device_end/device_end_unit_test/tcp_gateway/config/: dp_protocol_v2.json  gateway.conf  modbus_tcp.json
device_end/device_end_unit_test/tcp_gateway/include/dpower/net/: Interfaces.h
device_end/device_end_unit_test/tcp_gateway/include/dpower/redis/: Interfaces.h
device_end/device_end_unit_test/tcp_gateway/include/logic/: Config.h  PacketReassembler.h  ProtocolIdentifier.h  SessionManager.h  TCPServer.h  TCPSession.h
device_end/device_end_unit_test/tcp_gateway/src/adapters/: BoostNetAdaptors.cpp  RedisSwAdaptors.cpp
device_end/device_end_unit_test/tcp_gateway/src/app/: main.cpp
device_end/device_end_unit_test/tcp_gateway/src/logic/: Config.cpp  MultiProtocolManager.cpp  PacketReassembler.cpp  ProtocolIdentifier.cpp  SessionManager.cpp  TCPServer.cpp  TCPSession.cpp
device_end/device_end_unit_test/tcp_gateway/test/: test_multi_protocol_manager_unit.cpp  test_packet_reassembler_unit.cpp  test_tcp_session_unit.cpp
device_end/dpower_system_v2.0/: docker-compose.yml  install.sh
device_end/lisence/: TCP Gateway 许可证模块落地说明.md  issue_license.sh  vendor_private.pem  vendor_public.pem
device_end/performance_test/: README.md  comprehensive_performance_test.py  concurrent_tester.py  device_batch_inserter.py  enhanced_device_simulator.py  fast_concurrent_test.py  high_performance_test.py  list_test_devices.py  load_tester.py  main_test_runner.py  memory_usage_test.py  performance_guide.py  performance_monitor.py  quick_memory_test.py  quick_response_test.py  quick_start.py  quick_start_performance_test.py  requirements.txt  test_config.json  vm_config_template.json
device_end/performance_test/performance_reports/: performance_report_20250925_120210.html  performance_report_20250925_133747.html  performance_report_20250925_181627.html  performance_report_20250925_182755.html  performance_report_20250925_184042.html  performance_report_20250925_192709.html  performance_report_20250925_194308.html  performance_report_20250929_185654.html  (+8 more)
device_end/redis-plus-plus-1.3.14/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libredis++.so.1
device_end/tcp_gateway/: CMakeLists.txt  Dockerfile  README.md
device_end/tools/: concurrent_device_capacity_test.py  simulate_banknote_report_device.py  simulate_fault_report_device.py  simulate_heartbeat_device.py  simulate_upgrade_device_v2.py
dist_obf/backend/: __init__.py  app.py  config.py  extensions.py
dist_obf/pyarmor_runtime_000000/: __init__.py
(+194 files in other folders)
